--- a/BigDataIgnite/.gitignore
+++ b/BigDataIgnite/.gitignore
@@ -27,7 +27,7 @@ vignettes/*.pdf
 
 # knitr and R markdown default cache directories
 /*_cache/
-/cache/
+cache/
 
 # Temporary files created by R markdown
 *.utf8.md
@@ -37,3 +37,9 @@ vignettes/*.pdf
 # TeX stuff to ignore
 *.log
 *.aux
+*.nav
+*.toc
+*.vrb
+*.synctex.gz
+*.snm
+*_files
